# ambrosia-serve

./: .dockerignore  .editorconfig  .env.example  Dockerfile  README.md  compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  sonar-project.properties
.github/workflows/: ci.yml  deploy.yml  pipeline.yml
infra/: api_deployment.yml  db_deployment.yml  deployment.yml  hpa.yml  secret.yml
k8s/api/: api_deployment.yml
mock-payment-server/: server.py
src/: main.py  produto.py  usuario.py
src/cart/: cart_controller.py  exceptions.py
src/cart/adapters/: order_products_table.py  order_table.py  postgres_gateway.py  postgresql_repository.py  postgresql_uow.py  pydantic_presenter.py
src/cart/domain/: domain_exception.py
src/cart/ports/: cart_gateway.py  cart_presenter.py  repository_interface.py  unit_of_work_interface.py
src/cart/use_cases/: cart.py  create_cart.py  delete_order.py  get_all_orders.py  get_order_by_id.py  update_order_status.py
src/client/: user_controller.py
src/client/adapters/: AuditMixin.py  client_table.py  postgres_gateway.py  postgresql_repository.py  postgresql_uow.py  pydantic_presenter.py
src/client/controllers/: address.py  user.py  user_controller.py
src/client/domain/: domain_exception.py
src/client/ports/: repository_interface.py  unit_of_work_interface.py  user_gateway.py  users_presenter.py
src/client/use_cases/: address.py  create_use.py  delete_user.py  get_all_users.py  get_user_by_cpf.py  update_user.py  user.py
src/controllers/: address.py  user.py
src/domain/entities/: order.py  product.py  user.py
src/domain/enums/: categories.py  order_status.py  paymentConditions.py
src/domain/validators/: order_validator.py  product_validator.py
src/enums/: categorias.py
src/ports/: repository.py
src/ports/gateways/: address_gateway.py  user_gateway.py
src/ports/presenters/: address_presenter.py  create_new_user_presenter.py  users_presenter.py
src/product/: domain_exception.py  exceptions.py  product_controller.py
src/shared/: exceptions.py  postgresql_session_factory.py  repository_interface.py  unit_of_work_interface.py
src/use_cases/: address.py  user.py
src/user_cases/: create_new_user_user_case.py  user.py
tests/: in_memory_repository.py  in_memory_uow.py  mock_address_gateway.py  mock_user_gateway.py  test_address_use_case.py  test_order.py  test_product.py  test_produto.py  test_user.py  test_users_use_case.py  test_usuario.py
tests/cart/: conftest.py  test_order.py  test_usecase.py
tests/client/: conftest.py  mock_user_gateway.py  test_user.py  test_users_use_case.py  test_users_usecase.py
tests/product/: in_memory_product_gateway.py  in_memory_repository.py  in_memory_uow.py  json_presenter.py  test_product.py
(+61 files in other folders)
